--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,5 @@ build/
 
 .env
 
-./plugins/confluentinc-kafka-connect-elasticsearch-15.0.0/*
-./plugins/debezium-connector-postgres-2.7.4/*
+plugins/confluentinc-kafka-connect-elasticsearch-15.0.0/*
+plugins/debezium-connector-postgres-2.7.4/*
